--- a/html/stylesheet.html
+++ b/html/stylesheet.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <html>
   <head>
-    <title>Maestro</title>
+    <title>maestro!</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet" media="all">
     <link rel="stylesheet" href="../css/stylesheet.css">
@@ -15,16 +15,16 @@
       <h4>Body Font: Helvetica Neue Ultra Thin<br/><br/></h4>
       <div class="row">
         <div class="col-md-4 col-sm-4">
-          <span class="color-text">Pink: rgb (255, 0, 191)</span><br/>
+          <span class="color-text">Pink: rgb (255, 68, 95)</span><br/>
           <div class="pink"></div>
         </div>
         <div class="col-md-4 col-sm-4">
-          <span class="color-text">Purple: rgb (0, 240, 255)</span><br/>
-          <div class="purple"></div>
+          <span class="color-text">Orange-Yellow: rgb (255, 189, 123)</span><br/>
+          <div class="orange-yellow"></div>
         </div>
         <div class="col-md-4 col-sm-4">
-          <span class="color-text">Blue: rgb (0, 240, 255)</span><br/>
-          <div class="blue"></div>
+          <span class="color-text">Grey: rgb (40, 40, 40)</span><br/>
+          <div class="grey"></div>
         </div>
       </div>
       <div class="row">
