--- a/index.html
+++ b/index.html
@@ -83,6 +83,11 @@
                   </button>
                 </div>
               </div>
+              <div class="search-info center" id="search-info">
+                <img src="search-icon.png" class="big-search"><br>
+                <h2>Find your favorite music</h2>
+                <span class="search-info-body">Search for songs, artists, albums, and genres</span>
+              </div>
             </div>
           </div>
         </div>
