--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           <!-- Collect the nav links, forms, and other content for toggling -->
           <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav navbar-right">
-              <li><a href="#" id="username-update">{{master | json}}</a></li>
+              <li><a href="#" id="username-update">{{firstName}}</a></li>
               <li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
                   <span class="glyphicon glyphicon-user"></span><span class="caret"></span>
@@ -67,7 +67,6 @@
           <div class="col-md-5">
             <h1>My Playlist</h1>
             <div class="playlist-container">
-              <!--<iframe src="https://embed.spotify.com/?uri=spotify:track:4th1RQAelzqgY7wL53UGQt" width="100%" height="100%" frameborder="0" allowtransparency="true"></iframe>-->
             </div>
           </div>
           <div class="col-md-7">
@@ -120,7 +119,7 @@
                 First Name:
                 <span class="glyphicon glyphicon-ok ok-check val-sign fName"></span>
                 <span class="glyphicon glyphicon-remove x-mark val-sign fName"></span><br>
-                <input type="text" ng-model="user.firstName" class="formInput" required>
+                <input type="text" ng-model="username" class="formInput" required>
               </div>
               <div class="col-md-12">
                 Last Name:
@@ -147,7 +146,7 @@
                 <input type="password" ng-model="user.reTypePassword" class="formInput" required>
               </div>
               <div class="col-md-12">
-                <button type="submit" ng-click="update(user)" class="create-btn" id="submit">Create</button>
+                <button type="submit" ng-click="showName()" class="create-btn" id="submit">Create</button>
               </div>
             </div>
           </div>
