--- a/index.html
+++ b/index.html
@@ -65,7 +65,33 @@
         <div class="container-fluid">
           <div class="col-md-5">
             <h1>My Playlist</h1>
-            <div class="playlist-container">
+            <div class="playlist-container left">
+              <div class="row">
+                <div class="col-md-12">
+                  <div class="track-playing">
+                    <div class="col-xs-2 playing-img-icon">
+                    {{playlist.album.img}}
+                    </div>
+                    <div class="col-xs-9">
+                      <div class="col-xs-12 playing-track">
+                        Track
+                        <span class="artist">Artist</span>
+                      </div>
+                      <div class="col-xs-12 playing-audio">
+                        <audio controls>
+                        </audio>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-md-12">
+                  <div class="added-tracks">
+                    1. Track <span class="artist"> Artist</span>
+                  </div>
+                </div>
+              </div>
             </div>
           </div>
           <div class="col-md-7">
@@ -99,7 +125,7 @@
                             {{song.name}}
                          </span>
                           <span class="button">
-                            <button type="button" class="add-button">
+                            <button ng-click="testing()" type="button" class="add-button">
                               <span class="glyphicon glyphicon-plus"></span>
                             </button>
                           </span>
