--- a/index.html
+++ b/index.html
@@ -74,11 +74,12 @@
                     </div>
                     <div class="col-xs-9">
                       <div class="col-xs-12 playing-track">
-                        Track
+                        <span class="track">Track</span>
                         <span class="artist">Artist</span>
                       </div>
                       <div class="col-xs-12 playing-audio">
                         <audio controls>
+                          <source src="{{playlist.preview_url}}" type="audio/mpeg">
                         </audio>
                       </div>
                     </div>
@@ -87,8 +88,10 @@
               </div>
               <div class="row">
                 <div class="col-md-12">
-                  <div class="added-tracks">
-                    1. Track <span class="artist"> Artist</span>
+                  <div class="added-tracks" ng-repeat="tracks in playlist">
+                    <span class="number">1.</span>
+                    <span class="track">{{tracks.name}}</span>
+                    <span class="artist"> Artist</span>
                   </div>
                 </div>
               </div>
@@ -125,7 +128,7 @@
                             {{song.name}}
                          </span>
                           <span class="button">
-                            <button ng-click="testing()" type="button" class="add-button">
+                            <button ng-click="add($event)" data-id={{song.id}} type="button" class="add-button">
                               <span class="glyphicon glyphicon-plus"></span>
                             </button>
                           </span>
