--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                 <div class="col-md-12">
                   <div class="track-playing">
                     <div class="col-xs-2 playing-img-icon">
-                    {{playlist.album.img}}
+                    <img src={{playing.album.images[2].url}}>
                     </div>
                     <div class="col-xs-9">
                       <div class="col-xs-12 playing-track">
@@ -89,9 +89,11 @@
               <div class="row">
                 <div class="col-md-12">
                   <div class="added-tracks" ng-repeat="tracks in playlist">
-                    <span class="number">1.</span>
-                    <span class="track">{{tracks.name}}</span>
-                    <span class="artist"> Artist</span>
+                    <button type="button" class="track-btn">
+                      <span class="number">1.</span>
+                      <span class="track">{{tracks.name}}</span>
+                      <span class="artist">{{tracks.artists[0].name}}</span>
+                    </button>
                   </div>
                 </div>
               </div>
